--- a/views/header.html
+++ b/views/header.html
@@ -9,6 +9,6 @@
     <!-- <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"> -->
 
     <!-- Since I served the public folder, I will put the "remaining" path to the stylesheet with reference to that folder over here-->
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>ToDo List</title>
 </head>
